created base project

--- a/TipCalculator/app/src/main/res/layout-land/activity_main.xml
+++ b/TipCalculator/app/src/main/res/layout-land/activity_main.xml
@@ -57,10 +57,13 @@
         android:layout_marginTop="156dp"
         android:ems="10"
         android:hint="@string/enter_bill_total"
+        android:hintTextColor="#757575"
+        android:importantForAutofill="no"
         android:inputType="numberDecimal"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/textView"
@@ -68,7 +71,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="412dp"
-        android:text="@string/tip_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
