--- a/NavigationProject/app/src/main/res/layout/main_fragment.xml
+++ b/NavigationProject/app/src/main/res/layout/main_fragment.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainFragment">
 
+
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="150dp"
@@ -67,7 +69,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <Button
         android:id="@+id/button2"
