edited landscape layout

--- a/NavigationProject/app/src/main/res/layout/fragment_second1.xml
+++ b/NavigationProject/app/src/main/res/layout/fragment_second1.xml
@@ -12,8 +12,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="171dp"
-        android:text="@string/textview"
+        android:hint="@string/title_goes_here"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="152dp"
+        android:layout_height="156dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginBottom="218dp"
+        android:contentDescription="@string/chosen_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
