--- a/RecycleviewProject/app/src/main/res/values/themes.xml
+++ b/RecycleviewProject/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RecycleviewProject" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RecycleviewProject." parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,13 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+     <style name="Theme.RecycleviewProject.NoActionBar">
+            <item name="windowActionBar">false</item>
+            <item name="windowNoTitle">true</item>
+        </style>
+
+        <style name="Theme.RecycleviewProject.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+        <style name="Theme.RecycleviewProject.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     </style>
 </resources>
