--- a/RoomDemo/app/src/main/res/layout/card_layout.xml
+++ b/RoomDemo/app/src/main/res/layout/card_layout.xml
@@ -18,7 +18,7 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/itemImage"
+            android:id="@+id/deleteBtn"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="4dp"
